--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Raleway";
-  src: url("../Fonts/Rale.way/Raleway-Light.woff2") format("woff2");
+  src: url("../Fonts/Raleway/Raleway-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
