remove scrolling from body inside mobile menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,9 @@ body {
   line-height: 1.2;
   font-family: "Open Sans", sans-serif;
 }
+body.is-active {
+  overflow: hidden;
+}
 
 * {
   box-sizing: border-box;
